--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "akihiro.tanaka",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
-    "build": "tsc && node ./scripts/copy-statics.js && nuxt build",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.ts",
+    "build": "tsc --module CommonJS && node ./scripts/copy-statics.js && nuxt build",
     "start": "cross-env NODE_ENV=production node dist/server/index.js",
-    "generate": "nuxt-ts generate",
+    "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "test": "jest"
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
+    "@types/consola": "^1.0.0",
+    "@types/express": "^4.16.1",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
