--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "akihiro.tanaka",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.ts",
+    "dev": "cross-env NODE_ENV=development nodemon",
     "build": "tsc --module CommonJS && node ./scripts/copy-statics.js && nuxt build",
     "start": "cross-env NODE_ENV=production node dist/server/index.js",
     "generate": "nuxt generate",
@@ -20,6 +20,8 @@
     "express": "^4.16.4",
     "nuxt": "^2.4.0",
     "nuxt-ts": "^2.4.3",
+    "pts": "^0.7.0",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-property-decorator": "^7.3.0",
     "vuetify": "^1.5.0",
     "vuetify-loader": "^1.2.0"
