--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "jest": "^23.6.0",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
     "prettier": "1.14.3",
+    "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "ts-node": "^8.0.2",
