--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
+    "date-fns": "^1.30.1",
     "express": "^4.16.4",
     "nuxt": "^2.4.0",
     "nuxt-ts": "^2.4.3",
