--- a/package.json
+++ b/package.json
@@ -15,22 +15,30 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "buffer": "^5.2.1",
     "cross-env": "^5.2.0",
     "date-fns": "^1.30.1",
     "express": "^4.16.4",
+    "ipfs-api": "^26.1.2",
     "nuxt": "^2.4.0",
     "nuxt-ts": "^2.4.3",
     "pts": "^0.7.0",
+    "rxjs": "^6.4.0",
+    "truffle-contract": "^4.0.8",
     "vue-awesome-swiper": "^3.1.3",
     "vue-property-decorator": "^7.3.0",
     "vuetify": "^1.5.0",
-    "vuetify-loader": "^1.2.0"
+    "vuetify-loader": "^1.2.0",
+    "vuex-persistedstate": "^2.5.4",
+    "web3": "^1.0.0-beta.48"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
     "@types/consola": "^1.0.0",
     "@types/express": "^4.16.1",
+    "@types/web3": "^1.0.18",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
