--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/pwa": "^2.6.0",
     "buffer": "^5.2.1",
+    "chart.js": "^2.7.3",
     "cross-env": "^5.2.0",
     "date-fns": "^1.30.1",
     "express": "^4.16.4",
@@ -28,6 +29,7 @@
     "rxjs": "^6.4.0",
     "truffle-contract": "^4.0.8",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-chartjs": "^3.4.0",
     "vue-property-decorator": "^7.3.0",
     "vuetify": "^1.5.0",
     "vuetify-loader": "^1.2.0",
