--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,12 @@
   },
   "[scss]": {
       "editor.formatOnSave": true
-  }
+  },
+  "solidity.linter": "solium",
+  "solidity.soliumRules": {
+      "quotes": ["error", "double"],
+      "indentation": ["error", 2]
+  },
+  "solidity.packageDefaultDependenciesContractsDirectory": "",
+  "solidity.packageDefaultDependenciesDirectory": "node_modules",
 }
