--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
+    "truffle": "truffle develop",
     "test": "jest"
   },
   "dependencies": {
@@ -25,16 +26,17 @@
     "ipfs-api": "^26.1.2",
     "nuxt": "^2.4.0",
     "nuxt-ts": "^2.4.3",
+    "openzeppelin-solidity": "^2.1.3",
     "pts": "^0.7.0",
     "rxjs": "^6.4.0",
-    "truffle-contract": "^4.0.8",
+    "truffle-contract": "^4.0.9",
     "vue-awesome-swiper": "^3.1.3",
     "vue-chartjs": "^3.4.0",
     "vue-property-decorator": "^7.3.0",
     "vuetify": "^1.5.0",
     "vuetify-loader": "^1.2.0",
     "vuex-persistedstate": "^2.5.4",
-    "web3": "^1.0.0-beta.48"
+    "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
@@ -51,6 +53,7 @@
     "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "truffle": "^5.0.8",
     "ts-node": "^8.0.2",
     "tslint": "^5.13.0",
     "tslint-loader": "^3.5.4",
