update: update store

--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,9 @@
 {
   "functions": {
+    "predeploy": [
+      "npm run firebase:build",
+      "npm run firebase:install"
+    ],
     "source": "functions"
   },
   "hosting": {
