--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "truffle": "^5.0.8",
+    "truffle-hdwallet-provider": "^1.0.5",
     "ts-node": "^8.0.2",
     "tslint": "^5.13.0",
     "tslint-loader": "^3.5.4",
