add: api for opensea

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,7 @@ NUXT_ENV_ENDPOINT_IPFS_PROTOCOL = "http"
 NUXT_ENV_ENDPOINT_IPFS_HOST = "localhost"
 NUXT_ENV_ENDPOINT_IPFS_API_PORT = "3001"
 NUXT_ENV_ENDPOINT_IPFS_GATEWAY = "http://localhost:9000/ipfs/"
+
+SERVER_ENV_WEB3_HOST = "http://127.0.0.1:9545"
+SERVER_ENV_TOKEN_ADDRESS = ""
+SERVER_ENV_APP_HOST = "http://127.0.0.1:3000/"
