--- a/package.json
+++ b/package.json
@@ -25,11 +25,17 @@
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "@types/dotenv": "^6.1.1",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "buffer": "^5.2.1",
     "chart.js": "^2.7.3",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "date-fns": "^1.30.1",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-validator": "^5.3.1",
     "firebase-admin": "^7.1.1",
     "firebase-functions": "^2.2.1",
     "ipfs-api": "^26.1.2",
@@ -45,7 +51,7 @@
     "vuetify": "^1.5.0",
     "vuetify-loader": "^1.2.0",
     "vuex-persistedstate": "^2.5.4",
-    "web3": "^1.0.0-beta.37"
+    "web3": "^1.0.0-beta.51"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
