--- a/package.json
+++ b/package.json
@@ -1,81 +1,31 @@
 {
   "name": "unco-design-dapp",
-  "version": "1.0.0",
-  "description": "This project is for recording the Unco in a distributed network.",
+  "version": "0.1.0",
   "author": "akihiro.tanaka",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon",
-    "build": "rimraf dist && tsc --module CommonJS && node ./scripts/copy-statics.js && nuxt build",
-    "start": "cross-env NODE_ENV=production node dist/server/index.js",
-    "generate": "nuxt generate",
-    "lint": "tslint --project ./ --config ./",
-    "precommit": "npm run lint",
-    "truffle": "truffle develop",
-    "test": "jest",
-    "firebase:build": "npm run firebase:clear && npm run firebase:copy",
-    "firebase:install": "rimraf functions/node_modules && npm --prefix ./functions install ./functions",
-    "firebase:serve": "firebase serve --only hosting,functions",
-    "firebase:deploy": "firebase deploy",
-    "firebase:clear": "rimraf functions/.nuxt && rimraf functions/server && rimraf functions/public && mkdirp functions/.nuxt && mkdirp functions/server",
-    "firebase:copy": "cp -R .nuxt functions && cp -R dist/server functions && cp package.json functions && cp package-lock.json functions && cp -R src/static functions/public"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "export": "next export",
+    "preexport": "npm run build",
+    "deploy": "firebase deploy"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/dotenv": "^1.3.0",
-    "@nuxtjs/google-analytics": "^2.2.0",
-    "@nuxtjs/pwa": "^2.6.0",
-    "@types/dotenv": "^6.1.1",
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "buffer": "^5.2.1",
-    "chart.js": "^2.7.3",
-    "cors": "^2.8.5",
-    "cross-env": "^5.2.0",
-    "date-fns": "^1.30.1",
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "express-validator": "^5.3.1",
-    "firebase-admin": "^7.1.1",
-    "firebase-functions": "^2.2.1",
-    "ipfs-api": "^26.1.2",
-    "nuxt": "^2.4.0",
-    "nuxt-ts": "^2.4.3",
-    "openzeppelin-solidity": "^2.1.3",
-    "pts": "^0.7.0",
-    "rxjs": "^6.4.0",
-    "truffle-contract": "^4.0.9",
-    "vue-awesome-swiper": "^3.1.3",
-    "vue-chartjs": "^3.4.0",
-    "vue-property-decorator": "^7.3.0",
-    "vuetify": "^1.5.0",
-    "vuetify-loader": "^1.2.0",
-    "vuex-persistedstate": "^2.5.4",
-    "web3": "^1.0.0-beta.51"
+    "@next/font": "13.1.1",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
+    "next": "13.1.1",
+    "pts": "^0.11.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^0.0.1",
-    "@types/consola": "^1.0.0",
-    "@types/express": "^4.16.1",
-    "@types/web3": "^1.0.18",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "firebase-tools": "^6.5.0",
-    "jest": "^23.6.0",
-    "mkdirp": "^0.5.1",
-    "node-sass": "^4.11.0",
-    "nodemon": "^1.18.9",
-    "prettier": "1.14.3",
-    "rimraf": "^2.6.3",
-    "sass-loader": "^7.1.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "truffle": "^5.0.8",
-    "truffle-hdwallet-provider": "^1.0.5",
-    "ts-node": "^8.0.2",
-    "tslint": "^5.13.0",
-    "tslint-loader": "^3.5.4",
-    "vue-jest": "^3.0.2"
+    "firebase-tools": "^11.21.0"
   }
 }
