--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,9 @@
 {
   "hosting": {
     "public": "out",
-    "rewrites": [
-      {
-        "source": "**",
-        "function": "app"
-      }
+    "ignore": [
+      "firebase.json",
+      "**/node_modules/**"
     ]
   }
 }
